WanaLyzer/out/numpy/typing/tests/data/pass/arrayprint.pyi
from _typeshed import Incomplete

AR: Incomplete
