WanaLyzer/out/numpy/typing/tests/data/fail/ndarray.pyi
from _typeshed import Incomplete

float_array: Incomplete
